--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6,7 +6,7 @@ body{
 
 
 .container{
-  
+
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -77,22 +77,22 @@ nav{
 }
 
 .column3{
-  flex: 3;
+  flex: 4;
 }
 
 .column4 {
   flex: 1;
   font-weight: bold;
-  /* padding: 12px; */
+  padding: 20px;
   width: 300px;
 }
 
 footer{
-  margin:9px;
+  padding:9px;
   height: 60px;
-  text-align: right;
+  text-align: left;
   background-color:	#696969;
   color:white;
-  font-size: small;
+  font-size: medium;
 
 }
